docs: update README.md and gcs_upload task